--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,38 @@
 .App {
-  text-align: center;
-}
+display:flex;
+align-items:center;
+justify-content:center;
+flex-direction:column;
+width:100vw;
 
+}
+.paginationBttns {
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #2b2eff;
+  color: #2b2eff;
+  cursor: pointer;
+}
+.paginationBttns a:hover {
+  color: white;
+  background-color: #2b2eff;
+}
+.paginationActive a {
+  color: white;
+  background-color: #2b2eff;
+}
+.paginationDisabled a {
+  color: grey;
+  background-color: grey;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -23,7 +54,21 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.user {
+  width: 300px;
+  height: 150px;
+  border: 1px solid black;
+  border-radius: 15px;
+  background-color: pink;
+ 
+  display:flex;
+  align-items:center;
+  margin:20px;
+  flex-direction:column;
+  
 
+  justify-content: center;
+}
 .App-link {
   color: #61dafb;
 }
